<resources>
    <string name="app_name">Trip Planner</string>

    <string name="title_reservation">Reservation</string>
    <string name="title_hotel">Hotel</string>
    <string name="title_airline">Airline</string>

    <string name="action_settings">Settings</string>
    <string name="start_date_text">Start Date</string>
    <string name="end_date_text">End Date</string>
    <string name="passenger_name_text">Registration Name</string>
    <string name="passenger_count_text">Traveler Count</string>
    <string name="preferred_hotel_text">Preferred Hotel</string>
    <string name="preferred_airline_text">Preferred Airline</string>
    <string name="make_reservation_btn">Make Reservation</string>
    <string name="clear_btn">Clear All</string>
</resources>
