<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_reservation"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.sudoers.tripplanner.ui.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" />

    <fragment
        android:id="@+id/navigation_hotel"
        android:name="com.sudoers.tripplanner.ui.HotelFragment"
        android:label="@string/title_hotel"
        tools:layout="@layout/fragment_hotel" />

    <fragment
        android:id="@+id/navigation_airline"
        android:name="com.sudoers.tripplanner.ui.AirlineFragment"
        android:label="@string/title_airline"
        tools:layout="@layout/fragment_airline" />

</navigation>